fixed comparison table alignment

--- a/src/site/_includes/postcss/_home.css
+++ b/src/site/_includes/postcss/_home.css
@@ -80,8 +80,10 @@
     font-size: 20px;
 }
 
-.header-row > .comparison-table__cell:nth-child(2), .comparison-table__cell:nth-child(3) {
-    justify-content: flex-start;
+.header-row {
+    .comparison-table__cell:nth-child(2), .comparison-table__cell:nth-child(3) {
+        justify-content: flex-start;
+    }    
 }
 
 /* EVEN == ODD ?? */
